--- a/index.html
+++ b/index.html
@@ -303,7 +303,14 @@ ul li {
             <p><b>Paul G. Allen School of Computer Science & Engineering, University of Washington</b></p>
         </div>
     </div>
-	<div class="image-box">
+    <div class="image-box">
+      <a href="https://web.cs.ucla.edu/~weiwang/"><img src="assets/img/wei-wang.jpg" alt="Dr. Wei Wang"></a>
+      <div class="caption">
+          <p>Dr. Wei Wang</p>
+          <p><b>Leonard Kleinrock Chair Professor, Department of Computer Science, University of California, Los Angeles</b></p>
+      </div>
+    </div>
+	  <div class="image-box">
         <a href="https://siebelschool.illinois.edu/about/people/faculty/hengji"><img src="assets/img/heng-ji.jpg" alt="Dr. Heng Ji"></a>
         <div class="caption">
             <p>Dr. Heng Ji</p>
@@ -311,10 +318,17 @@ ul li {
         </div>
     </div>
     <div class="image-box">
-        <a href="https://web.cs.ucla.edu/~weiwang/"><img src="assets/img/wei-wang.jpg" alt="Dr. Wei Wang"></a>
+        <a href="https://stanford.edu/~yamins"><img src="assets/img/dan-yamins.jpg" alt="Dr. Dan Yamins"></a>
         <div class="caption">
-            <p>Dr. Wei Wang</p>
-            <p><b>Leonard Kleinrock Chair Professor, Department of Computer Science, University of California, Los Angeles</b></p>
+            <p>Dr. Dan Yamins</p>
+            <p><b>Department of Psychology and Computer Science, Stanford University</b></p>
+        </div>
+    </div>
+    <div class="image-box">
+        <a href="https://vcresearch.berkeley.edu/faculty/gerbrand-ceder"><img src="assets/img/gerbrand-ceder.jpg" alt="Dr. Gerbrand Ceder"></a>
+        <div class="caption">
+            <p>Dr. Gerbrand Ceder</p>
+            <p><b>Samsung Distinguished Chair, Nanoscience and Nanotechnology Research, University of California, Berkeley</b></p>
         </div>
     </div>
     <div class="image-box">
@@ -324,13 +338,6 @@ ul li {
             <p><b>John D. MacArthur Professor, Department of Mathematics, University of Wisconsin</b></p>
         </div>
     </div>
-    <!-- <div class="image-box">
-        <a href="https://cee.mit.edu/people_individual/markus-j-buehler/"><img src="assets/img/keynote-4.jpg" alt="Dr. Markus J. Buehler"></a>
-        <div class="caption">
-            <p>Dr. Markus J. Buehler</p>
-            <p><b>Department of Civil and Environmental Engineering, Massachusetts Institute of Technology</b></p>
-        </div>
-    </div> -->
 </div>
 	</section>
 	
@@ -796,7 +803,7 @@ ul li {
 
       </div>
 	  
-	<div class="container_three">
+	<div class="container_six">
 	<div class="image-box">
         <a href="https://wilburone.github.io"><img src="assets/img/lifu-huang.jpg" alt="Dr. Lifu Huang"></a>
         <div class="caption">
@@ -824,8 +831,6 @@ ul li {
     <p><b>Website:</b> <a href="https://roseyu.com/">website_link</a></p> -->
       </div>
   </div>
-	</div>
-	<div class="container_three">
 	<div class="image-box">
         <a href="https://violetpeng.github.io/"><img src="assets/img/nanyun-peng.jpg" alt="Dr. Nanyun Peng"></a>
         <div class="caption">
@@ -835,24 +840,25 @@ ul li {
 			<p><b>Website:</b> <a href="https://violetpeng.github.io/">website_link</a></p> -->
         </div>
     </div>
-    <div class="image-box">
-        <a href="https://sites.google.com/view/dawei-zhou/home"><img src="assets/img/dawei-zhou.jpg" alt="Dr. Dawei Zhou"></a>
-        <div class="caption">
-            <p>Dr. Dawei Zhou</p>
-            <p><b>Virginia Tech</b></p>
-			<!-- <p><b>Email:</b> zhoud@vt.edu</p>
-			<p><b>Website:</b> <a href="https://sites.google.com/view/dawei-zhou/home">website_link</a></p> -->
-        </div>
+  <div class="image-box">
+    <a href="https://dongqifu.github.io/"><img src="assets/img/dongqi-fu.jpg" alt="Dr. Dongqi Fu"></a>
+    <div class="caption">
+        <p>Dr. Dongqi Fu</p>
+        <p><b>Meta</b></p>
+  <!-- <p><b>Email:</b> dongqif2@illinois.edu</p>
+  <p><b>Website:</b> <a href="https://dongqifu.github.io/">website_link</a></p> -->
     </div>
-    <div class="image-box">
-      <a href="https://dongqifu.github.io/"><img src="assets/img/dongqi-fu.jpg" alt="Dr. Dongqi Fu"></a>
+  </div>
+  <div class="image-box">
+      <a href="https://sites.google.com/view/dawei-zhou/home"><img src="assets/img/dawei-zhou.jpg" alt="Dr. Dawei Zhou"></a>
       <div class="caption">
-          <p>Dr. Dongqi Fu</p>
-          <p><b>Meta</b></p>
-    <!-- <p><b>Email:</b> dongqif2@illinois.edu</p>
-    <p><b>Website:</b> <a href="https://dongqifu.github.io/">website_link</a></p> -->
+          <p>Dr. Dawei Zhou</p>
+          <p><b>Virginia Tech</b></p>
+    <!-- <p><b>Email:</b> zhoud@vt.edu</p>
+    <p><b>Website:</b> <a href="https://sites.google.com/view/dawei-zhou/home">website_link</a></p> -->
       </div>
   </div>
+
 	
 </div>
 	  
