--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@ ul li {
       </div>
       <div class="container text-center">
         <div class="d-flex flex-column justify-content-center align-items-center">
-          <h1 data-aos="fade-up">Towards Agentic AI for Science: Hypothesis Generation, Comprehension, Quantification, and Validation  (NeurIPS, 2025)</h1>
-          <p data-aos="fade-up" data-aos-delay="100">December 6, 2025 | San Diego<br></p>
+          <h1 data-aos="fade-up">Towards Agentic AI for Science: Hypothesis Generation, Comprehension, Quantification, and Validation  (ICLR, 2026)</h1>
+          <p data-aos="fade-up" data-aos-delay="100"> 2026 | Rio de Janeiro, Brazil<br></p>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
             <!-- <a href="#speakers" class="btn-getstarted">Gallery</a> -->
             <!-- <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
@@ -1045,12 +1045,12 @@ ul li {
 	  
       <div class="container section-title" data-aos="fade-up">
         <h2>CONTACT US</h2>
-        <p>For inquiries regarding the workshop, please reach out to us at  <a href="aditkulk@vt.edu">neuripsagenticai@gmail.com</a>.</p>
+        <p>For inquiries regarding the workshop, please reach out to us at  <a href="aditkulk@vt.edu">ucdavisplumlab@gmail.com</a>.</p>
       </div><!-- End Section Title -->
 
       
     <div class="container copyright text-center mt-4">
-      <p>© <span>2024-2025</span> <strong class="px-1 sitename">NeurIPS Agentic AI for Scientific Discovery Workshop 2025</strong><span>All Rights Reserved</span></p>
+      <p>© <span>2024-2025</span> <strong class="px-1 sitename">ICLR Agentic AI for Scientific Discovery Workshop 2026</strong><span>All Rights Reserved</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
