--- a/index.html
+++ b/index.html
@@ -339,6 +339,15 @@ ul li {
         </div>
     </div>
 </div>
+	<div class="image-box">
+      <a href="https://search.asu.edu/profile/231973"><img src="assets/img/chitta-baral.jpg" alt="Dr. Chitta Baral"></a>
+      <div class="caption">
+          <p>Dr. Chitta Baral</p>
+          <p><b>Professor, School of Computing and Augmented Intelligence, Arizona State University</b></p>
+    <!-- <p><b>Email:</b> zhoud@vt.edu</p>
+    <p><b>Website:</b> <a href="https://sites.google.com/view/dawei-zhou/home">website_link</a></p> -->
+      </div>
+  </div>
 	</section>
 	
 	
