--- a/index.html
+++ b/index.html
@@ -339,15 +339,6 @@ ul li {
         </div>
     </div>
 </div>
-	<div class="image-box">
-      <a href="https://search.asu.edu/profile/231973"><img src="assets/img/chitta-baral.jpg" alt="Dr. Chitta Baral"></a>
-      <div class="caption">
-          <p>Dr. Chitta Baral</p>
-          <p><b>Professor, School of Computing and Augmented Intelligence, Arizona State University</b></p>
-    <!-- <p><b>Email:</b> zhoud@vt.edu</p>
-    <p><b>Website:</b> <a href="https://sites.google.com/view/dawei-zhou/home">website_link</a></p> -->
-      </div>
-  </div>
 	</section>
 	
 	
@@ -863,6 +854,26 @@ ul li {
       <div class="caption">
           <p>Dr. Dawei Zhou</p>
           <p><b>Virginia Tech</b></p>
+    <!-- <p><b>Email:</b> zhoud@vt.edu</p>
+    <p><b>Website:</b> <a href="https://sites.google.com/view/dawei-zhou/home">website_link</a></p> -->
+      </div>
+  </div>
+
+	<div class="image-box">
+      <a href="https://search.asu.edu/profile/231973"><img src="assets/img/chitta-baral.jpg" alt="Dr. Chitta Baral"></a>
+      <div class="caption">
+          <p>Dr. Chitta Baral</p>
+          <p><b>Arizona State University</b></p>
+    <!-- <p><b>Email:</b> zhoud@vt.edu</p>
+    <p><b>Website:</b> <a href="https://sites.google.com/view/dawei-zhou/home">website_link</a></p> -->
+      </div>
+  </div>
+
+	<div class="image-box">
+      <a href="https://www.cos.ufrj.br/~daniel/"><img src="assets/img/daniel.jpg" alt="Dr. Daniel Ratton Figueiredo"></a>
+      <div class="caption">
+          <p>Dr. Daniel Ratton Figueiredo</p>
+          <p><b>Federal University of Rio de Janeiro</b></p>
     <!-- <p><b>Email:</b> zhoud@vt.edu</p>
     <p><b>Website:</b> <a href="https://sites.google.com/view/dawei-zhou/home">website_link</a></p> -->
       </div>
