--- a/index.html
+++ b/index.html
@@ -1051,7 +1051,7 @@ ul li {
 	  
       <div class="container section-title" data-aos="fade-up">
         <h2>CONTACT US</h2>
-        <p>For inquiries regarding the workshop, please reach out to us at  <a href="aditkulk@vt.edu">ucdavisplumlab@gmail.com</a>.</p>
+        <p>For inquiries regarding the workshop, please reach out to us at  <a href="aditkulk@vt.edu">agenticai4science@gmail.com</a>.</p>
       </div><!-- End Section Title -->
 
       
