--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@ ul li {
     </div>
 
     <div class="image-box">
-      <a href="https://micc.snu.ac.kr/professor/"><img src="assets/img/yousung=jung" alt="Dr. Yousung Jung"></a>
+      <a href="https://micc.snu.ac.kr/professor/"><img src="assets/img/yousung-jung.jpg" alt="Dr. Yousung Jung"></a>
       <div class="caption">
         <p>Dr. Yousung Jung</p>
         <p><b>Seoul National University</b></p>
@@ -877,7 +877,7 @@ ul li {
         <h2>Website Chair</h2>
       </div><!-- End Section Title -->
 
-      <div class="container_two">
+      <div class="container_three">
 	  <div class="image-box">
         <a href="https://wanghh7.github.io/"><img src="assets/img/haohui-wang.jpg" alt="Haohui Wang"></a>
         <div class="caption">
@@ -895,6 +895,7 @@ ul li {
     <!-- <p><b>Email:</b> qzlin@ucdavis.edu</p>
     <p><b>Website:</b> <a href="https://zihaolinqz.github.io/">website_link</a></p> -->
       </div>
+	</div>
     <div class="image-box">
       <a href="https://jiankeyang.github.io/"><img src="assets/img/jianke-yang.jpg" alt="Jianke Yang"></a>
       <div class="caption">
