--- a/index.html
+++ b/index.html
@@ -1043,7 +1043,7 @@ ul li {
 
       
     <div class="container copyright text-center mt-4">
-      <p>© <span>2024-2025</span> <strong class="px-1 sitename">ICLR Agentic AI for Scientific Discovery Workshop 2026</strong><span>All Rights Reserved</span></p>
+      <p>© <span>2024-2026</span> <strong class="px-1 sitename">ICML Towards End-to-End Automation in Materials Science Workshop 2026</strong><span>All Rights Reserved</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
