--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ ul li {
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Agentic AI for Scientific Discovery</h1>
+        <h1 class="sitename">Towards End-to-End Automation in Materials Science</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
