--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@ ul li {
         <div class="caption">
             <p>Dr. Markus Buehler</p>
             <p><b>Civil and Environmental Engineering, Massachusetts Institute of Technology</b></p>
+			<p>(Confirmed)</p>
         </div>
     </div>
     <div class="image-box">
@@ -293,6 +294,7 @@ ul li {
       <div class="caption">
           <p>Dr. Wei Wang</p>
           <p><b>Leonard Kleinrock Chair Professor, Department of Computer Science, University of California, Los Angeles</b></p>
+		  <p>(Confirmed)</p>
       </div>
     </div>
 	  <div class="image-box">
@@ -300,6 +302,7 @@ ul li {
         <div class="caption">
             <p>Dr. Alán Aspuru-Guzik</p>
             <p><b>Chemistry and Computer Science, University of Toronto</b></p>
+			<p>(Confirmed)</p>
         </div>
     </div>
     <div class="image-box">
@@ -307,6 +310,7 @@ ul li {
         <div class="caption">
             <p>Dr. Kyunghyun Cho</p>
             <p><b>Computer Science, New York University / Genentech</b></p>
+			<p>(Tenative)</p>
         </div>
     </div>
     <div class="image-box">
@@ -314,6 +318,7 @@ ul li {
         <div class="caption">
             <p>Dr. Gerbrand Ceder</p>
             <p><b>Samsung Distinguished Chair, Nanoscience and Nanotechnology Research, University of California, Berkeley</b></p>
+			<p>(Tenative)</p>
         </div>
     </div>
     <div class="image-box">
@@ -321,6 +326,7 @@ ul li {
         <div class="caption">
             <p>Dr. Wei Chen</p>
             <p><b>Mechanical Engineering, Northwestern University</b></p>
+			<p>(Confirmed)</p>
         </div>
     </div>
 </div>
@@ -877,7 +883,7 @@ ul li {
         <h2>Website Chair</h2>
       </div><!-- End Section Title -->
 
-      <div class="container_three">
+      <div class="container_two">
 	  <div class="image-box">
         <a href="https://wanghh7.github.io/"><img src="assets/img/haohui-wang.jpg" alt="Haohui Wang"></a>
         <div class="caption">
@@ -896,16 +902,6 @@ ul li {
     <p><b>Website:</b> <a href="https://zihaolinqz.github.io/">website_link</a></p> -->
       </div>
 	</div>
-    <div class="image-box">
-      <a href="https://jiankeyang.github.io/"><img src="assets/img/jianke-yang.jpg" alt="Jianke Yang"></a>
-      <div class="caption">
-          <p>Jianke Yang</p>
-          <p><b>UCSD</b></p>
-    <!-- <p><b>Email:</b> jiy065@ucsd.edu</p>
-    <p><b>Website:</b> <a href="https://jiankeyang.github.io/">website_link</a></p> -->
-      </div>
-  </div>
-	  
 	  
 	  </div>
 
