--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ ul li {
 .table {display:table; margin-right: 100px; margin-left: 100px;}
 .row { display:table-row;}
 .cell {display:table-cell;width:10px;gap:5px;text-align: center;}
-.sitename {
+h1.sitename {
     font-size: 26px; 
 }
 
