--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@ h1.sitename {
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Towards End-to-End Automation in Materials Science</h1>
+        <h1 class="sitename">Towards End-to-End 
+			Automation in Materials Science</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
