--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ ul li {
 .row { display:table-row;}
 .cell {display:table-cell;width:10px;gap:5px;text-align: center;}
 h1.sitename {
-    font-size: 24px !important;
+    font-size: 25px !important;
 }
 
 </style>
@@ -145,8 +145,7 @@ h1.sitename {
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Towards End-to-End 
-			Automation in Materials Science</h1>
+        <h1 class="sitename">Towards End-to-End Automation in Materials Science</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
